# twitterELK

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  kibana_dashboard.json
containers/ingress/: .dockerignore  Dockerfile  Pipfile  README.rst  mypy.ini  pyproject.toml  retrieve_sample_data.py  setup.py
containers/ingress/ingress/: __init__.py  celery.py  data_queue.py  elastic.py  exceptions.py  geocode.py  helpers.py  listeners.py  main.py  structures.py  utils.py
containers/ingress/ingress/data_processing/: __init__.py  console.py  console.py.disable  geocode.py  processing.py  sentiment.py
containers/ingress/tests/: __init__.py  test_elastic.py  test_listeners.py  test_structures.py  test_utils.py  tweets.py
containers/ingress/tests/data_processing/: __init__.py  test_geocode.py  test_processing.py  test_sentiment.py
containers/logstash/: twitter.conf
containers/rabbitmq/: Dockerfile
containers/sentiment_analysis/: .coveragerc  README.rst  pyproject.toml
design/: Current Architecture.graphml  Final Architecture.graphml  Ultimate Architecture.graphml  application_flow.graphml
ingress/: .coveragerc  .gitignore  Pipfile  setup.py
ingress/ingress/: __init__.py  listeners.py  main.py
sentiment_analysis/: Pipfile  README.rst  setup.py
